--- a/src/content/translations/de.json
+++ b/src/content/translations/de.json
@@ -1,15 +1,6 @@
 {
     "aboutTitle": "Über uns",
-    "aboutParagraph1": "Unser Team hat sich erst im Zuge des deutschen Hackathon <i>#wirvsvirus</i> gegründet. Alle Mitglieder des Teams kannten sich bis dahin noch nicht! Gemeinsam sind wir die folgende, von der Bundesregierung bzw. der Bundespolizei gestellte Herausforderung angegangen:",
-    "aboutParagraph2": "Seit der Corona-Krise kommt es durch intensivere Grenzkontrollen an den Grenzübergangen zu langen LKW-Staus von bis zu 60 KM. Diese führen zu langen Wartezeiten, welche zu Unterbrechungen von wichtigen Lieferketten, z.B. bei Lebensmitteln und wichtigen medizinischen Produkten, führen. Wie kann man die Staus an den Grenzübergangen vermeiden, bzw. wenigstens verkürzen?",
-    "aboutParagraph3": "Unser beim Hackathon entwickelter Prototyp <b>Fast&nbsp;Border&nbsp;Crossing</b>, der sich auf den gewerblichen Güterverkehr konzentriert, wurde beim deutschen Hackathon <i>#wirvsvirus</i> in die Top20 aller 1500 eingereichten Lösungen aufgenommen. Diese Auszeichnung bestärkt und motiviert uns <b>Fast&nbsp;Border&nbsp;Crossing</b> weiter voran zu treiben.",
-    "architectureTitle": "Architektur",
-    "architectureParagraph1": "Mit der von uns gewählten Architektur, und der daraus resultierenden Applikationslandschaft, ergeben sich folgende Benefits für alle Beteiligten:",
-    "architectureLi1": "Effiziente und hygienische Grenzkontrollen",
-    "architectureLi2": "Nachvollziehbarkeit von Infektionsketten und Möglichkeit der Unterbrechung",
-    "architectureLi3": "Plattformunabhängigkeit und Erweiterbarkeit",
-    "architectureLi4": "Skalierbare Lösung und ganzheitlicher, europäischer Ansatz",
-    "architectureLi5": "Weiterverarbeitung der Daten und Analysemöglichkeiten",
+    "aboutParagraph1": "Wir sind ein freies Team bestehend aus einigen Produktmanagern, Designern und Entwicklern. Zusammen haben wir beim #wirvsvirus-Hackathon das Projekt Fast Border Crossing konzeptioniert und entwickelt.",
     "contactTitle": "Kontakt",
     "contactGeneralTitle": "Allgemein",
     "contactPressTitle": "Presse",
@@ -25,23 +16,42 @@
     "homeBoxTitle3": "#wirvsvirus-Top 20 von über 1.500 Projekten",
     "homeBox3": "Beim #wirvsvirus - Hackathon der Bundesregierung wurden wir von unabhängigen Expertinnen und Experten in die Top 20 von über 1.500 Projekten gewählt.",
     "notFound": "Die angeforderte Seite wurde nicht gefunden",
+    "projectOf": "Ein Projekt des",
     "solutionTitle": "Unsere Lösung",
     "solutionSubtitle": "Kurz erklärt",
     "solutionParagraph1": "FastBorderCrossing zielt darauf ab, den Verkehr zwischen Grenzübergängen in Europa zu optimieren und Staus zu reduzieren oder aufzuheben.",
     "solutionStepTitle1": "Dateneingabe vom Fahrer",
     "solutionStepText1": "Der Fahrer gibt bereits vor der Grenzkontrolle wichtige Daten in die Fahrer-App ein. <br /><br /> Hierzu gehören insbesondere Informationen zu:",
+    "solutionStepList1": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Fahrer und Passagiere</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Unternehmen</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Ladung</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Fahrzeug</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Tour</li>",
     "solutionStepTitle2": "Fahrer erhält einen QR-Code",
     "solutionStepText2": "Nach erfolgreicher Speicherung seiner Daten erhält der Fahrer einen QR-Code, der seine Tour repräsentiert. Der QR-Code kann als Bild oder PDF heruntergeladen werden.",
     "solutionStepTitle3": "Grenzkontrolle",
     "solutionStepText3": "Bei der Grenzkontrolle kann der Fahrer dem Grenzbeamten nun einfach den QR-Code vorzeigen. Der Grenzbeamte scannt den QR-Code in der Checkpoint-App und erhält alle benötigten Informationen auf einen Blick.",
+    "solutionStepList3": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Wer überquert die Grenze?</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Was wird transportiert?</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Welche Route verfolgt das Fahrzeug?</li>",
     "solutionStepTitle4": "Weiterfahrt",
     "solutionStepText4": "Dank Fast Border Crossing ist die Grenzkontrolle schnell und einfach durchgeführt. Das Infektionsrisiko wird minimiert und der Enstehung von langen Staus wird entgegengewirkt.",
+    "solutionStepList4": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Infektionsschutz für Grenzbeamte und Fahrer</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Vermeidung von langen Staus durch schnelle Grenzkontrolle</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Wichtige Versorgungsgüter können prioritär behandelt werden</li>",
     "solutionTitle2": "Unsere Lösung",
-    "driverAppTitle": "Fahrer App",
-    "checkpointAppTitle": "Checkpoint App",
+    "driverAppTitle": "Die Driver-App",
+    "driverAppParagraph": "Die Driver-App für den LKW-Fahrer. Die Erfassung der benötigten Informationen erfolgt bereits vor der Grenzkontrolle.",
+    "driverAppFeature1": "Für jede Landesgrenze das passende Formular",
+    "driverAppFeature2": "Dateneingabe erfolgt vorab zu einem beliebigen Zeitpunkt",
+    "driverAppFeature3": "Offline Unterstützung: QR-Code als Bild oder PDF herunterladen",
+    "checkpointAppTitle": "Die Checkpoint-App",
+    "checkpointAppParagraph": "Die Checkpoint-App für Grenzbeamte und medizinisches Personal liefert alle wichtigen Informationen auf einen Blick.",
+    "checkpointAppFeature1": "Schnelle und fundierte Entscheidung über die Einreise",
+    "checkpointAppFeature2": "Eintragung von Gesundheitsabfragen / Tests",
+    "checkpointAppFeature3": "Bestätigung und Speichern der Daten in der Datenbank (Auswertungen möglich)",
+    "adminAppTitle": "Das Admin-Backend",
+    "adminAppParagraph": "Die Adminpage ist eine Webapplikation, die staatlichen Stellen ermöglicht, die Profile der Grenzbeamten zu verwalten und die länderspezifischen Formulare zu gestalten. Darüber hinaus stehen umfangreiche Analysen in Echtzeit bereit.",
+    "adminAppFeature1": "Dynamischer Formularkonfigurator",
+    "adminAppFeature2": "Verwaltung der Zugänge für Grenzbeamte",
+    "adminAppFeature3": "Umfangreiche Analysen in Echtzeit",
     "teamTitle": "Über uns",
     "teamParagraph1": "Wir sind ein freies Team bestehend aus einigen Produktmanagern, Designern und Entwicklern. Zusammen haben wir beim #wirvsvirus-Hackathon das Projekt Fast Border Crossing konzeptioniert und entwickelt.",
     "infoEmail": "info@fastbordercrossing.org",
     "pressEmail": "press@fastbordercrossing.org",
-    "applicationTitle": "Anwendungen"
+    "linkTextDriverApp": "Zur Driver-App",
+    "linkTextCheckpointApp": "Zur Checkpoint-App"
+
 }
