--- a/src/content/translations/en.json
+++ b/src/content/translations/en.json
@@ -1,31 +1,53 @@
 {
-    "aboutTitle": "About Us",
-    "aboutParagraph1": "When we met during the <i>#wirvsvirus</i> Hackathon, we did not know each other. Together we approached the following challenge, proposed by the German government:",
-    "aboutParagraph2": "During the Corona-Crisis we face tightened border controls and up to 60 kilometers worth of traffic jams in the European Union. These circumstances lead to long waiting periods at the border and disruptions in supply chains for food and mediacl products. How can traffic jams be avoided or reduced?",
-    "aboutParagraph3": "Our prototype for industrial freight transport <b>Fast Border Crossing</b>, was rated Top20 of 1500 submissions during the German <i>#wirvsvirus</i> Hackathon. This rating motivates us to further develop <b>Fast Border Crossing</b>.",
-    "architectureTitle": "Architecture",
-    "architectureParagraph1": "Our Architecture is elaborated and enables important features:",
-    "architectureLi1": "Efficient and hygenic border controls",
-    "architectureLi2": "Trackable and interruptable chains of infection",
-    "architectureLi3": "Platform independent and extendable functionality",
-    "architectureLi4": "Scalable and pan-European approach",
-    "architectureLi5": "Data processing and analysis",
+    "aboutTitle": "About us",
+    "aboutParagraph1": "We are a free team consisting of several product managers, designers and developers. Together, we conceptualized and developed the Fast Border Crossing project at the #wirvsvirus hackathon.",
     "contactTitle": "Contact",
-    "contactGeneralTitle": "General inquiries",
+    "contactGeneralTitle": "General",
     "contactPressTitle": "Press",
-    "contactGeneralParagraph1": "You can reach out to us via E-Mail. Please send your inquiries to the email address below",
-    "contactPressParagraph1": "You can reach out to us via E-Mail. Please send your press related inquiries to the email address below",
-    "contactPressParagraph2": "Please be aware that we can not respond to press unrelated subjects on this channel. Please use the info email address for general information.",
-    "homeTitle": "Reduction of traffic jams for industrial freight transport",
-    "homeParagraph1": "By using <b>Fast Border Crossing</b> you help strengthening the free, european-wide transport of goods and the containment of the Corona pandemic.",
-    "notFound": "The requested page was not found",
-    "solutionTitle": "Our Solution",
-    "solutionParagraph1": "Paper forms are currently used on arrival at european borders to collect necessary information regarding the Corona-Crisis. <b>fastbordercrossing.org</b> creates an EU wide Platform for drivers and border officials to digitally exchange information that are necessary for border crossing - fast. Information about the trip - including start countries, transit countries and destination countries - are provided before departure, saved in a central database and can be reviewed by officials at the border via QR-Code. Necessary information can be configured individually for every european border and may include health-related checks.",
-    "driverAppTitle": "Driver Application",
-    "checkpointAppTitle": "Checkpoint Application",
-    "teamTitle": "Team",
-    "teamParagraph1": "We are behind FastBorderCrossing",
+    "contactGeneralParagraph1": "You can contact us by email. Please send your inquiries to the email address below.",
+    "contactPressParagraph1": "You can contact us by email. Please send your press inquiries to the email address below.",
+    "contactPressParagraph2": "Please understand that other requests cannot be answered via this channel. For all other inquiries, please use general email address.",
+    "homeTitle": "Optimization of border controls with fast border crossing",
+    "homeParagraph1": "Digitization of border controls at Europe's internal borders",
+    "homeBoxTitle1": "Border controls, fast, easy, digital",
+    "homeBox1": "Thanks to the contactless transmission of all relevant data using a QR code, border control is done quick, easy and hygienic.",
+    "homeBoxTitle2": "Scalable application architecture",
+    "homeBox2": "Thanks to the use of state-of-the-art technologies, rapid scalability can be guaranteed with changing framework conditions.",
+    "homeBoxTitle3": "#wirvsvirus-Top 20 of over 1,500 projects",
+    "homeBox3": "At the #wirvsvirus hackathon, we were selected by independent experts in the top 20 of over 1,500 projects.",
+    "notFound": "The requested page could not be found",
+    "projectOf": "A project by",
+    "solutionTitle": "Our solution",
+    "solutionParagraph1": "FastBorderCrossing aims to optimize traffic between border crossings in Europe and to reduce or remove traffic jams",
+    "solutionStepTitle1": "Data entry by the driver",
+    "solutionStepText1": "The driver enters important data in the driver app before the border control. <br /> <br /> This includes in particular information on:",
+    "solutionStepList1": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Driver and Passengers</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Company</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Cargo</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Vehicle</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Tour</li>",
+    "solutionStepTitle2": "Driver receives a QR-Code",
+    "solutionStepText2": "After successfully storing of the data, the driver receives a QR-Code that represents his tour. The QR code can be downloaded as an image or PDF.",
+    "solutionStepTitle3": "Border control",
+    "solutionStepText3": "During border control, the driver can now simply show the QR code to the border official. The border guard scans the QR code in the Checkpoint app and receives all the information he needs at a glance.",
+    "solutionStepList3": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Who is crossing the border?</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>What is being transported?</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Which route does the vehicle follow?</li>",
+    "solutionStepTitle4": "Drive on",
+    "solutionStepText4": "Thanks to Fast Border Crossing, border control is quick and easy. The risk of infection is minimized and the development of long traffic jams is counteracted.",
+    "solutionStepList4": "<li><span class='fa-li'><i class='fas fa-check-square'></i></span>Protection against infection for border guards and drivers</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Avoid long traffic jams thanks to quick border controls</li><li><span class='fa-li'><i class='fas fa-check-square'></i></span>Important supplies can be given priority</li>",
+    "driverAppTitle": "Driver-App",
+    "driverAppParagraph": "The driver app for the truck driver. The required information is recorded before the border control.",
+    "driverAppFeature1": "The right form for every national border",
+    "driverAppFeature2": "Data can be entered in advance at any time",
+    "driverAppFeature3": "Offline support: download QR code as image or PDF",
+    "checkpointAppTitle": "Checkpoint-App",
+    "checkpointAppParagraph": "The checkpoint app for border guards and medical personnel provides all important information at a glance.",
+    "checkpointAppFeature1": "Quick and informed decision about the entry permit",
+    "checkpointAppFeature2": "Registration of health queries / tests",
+    "checkpointAppFeature3": "Confirmation and storage of the data in the database (evaluations possible)",
+    "adminAppTitle": "Admin-Backend",
+    "adminAppParagraph": "The admin backend is a web application that enables government agencies to manage the profiles of border guards and to design country-specific forms. In addition, extensive analyzes are available in real time.",
+    "adminAppFeature1": "Dynamic form configurator",
+    "adminAppFeature2": "Accessmanagement of border officials",
+    "adminAppFeature3": "Comprehensive analyzes in real time",
     "infoEmail": "info@fastbordercrossing.org",
     "pressEmail": "press@fastbordercrossing.org",
-    "applicationTitle": "Applications"
+    "linkTextDriverApp": "Driver-App",
+    "linkTextCheckpointApp": "Checkpoint-App"
+
 }
